plugins {
    id 'java'
    id 'maven-publish'
    id "co.uzzu.dotenv.gradle" version "2.0.0"
}

group = 'com.rdruzhchenko'
version = '1.0.7'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
    withSourcesJar()
    withJavadocJar()
}

repositories {
    mavenCentral()
}

dependencies {
    // JSON
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.2'

    // Unit tests
    testImplementation 'org.junit.jupiter:junit-jupiter:5.12.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

publishing {
    publications {
        gpr(MavenPublication) {
            from(components.java)
        }
    }
    repositories {
        maven {

            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com/drrost/fs-jutils")
            credentials {
                username = env.GPR_USER.value
                password = env.GPR_KEY.value
            }
        }
    }
}